resources/lab11/01-green.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bluegreen
  labels:
    istio-injection: enabled
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: green
  namespace: bluegreen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bluegreen-app
      version: v1
  template:
    metadata:
      labels:
        app: bluegreen-app
        version: v1
    spec:
      containers:
      - name: green
        image: xpiritbv/bluegreen:green
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: green
  namespace: bluegreen
  labels:
    app: bluegreen-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bluegreen-app
    version: v1
