resources/lab11/04-buggy.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: buggy
  namespace: bluegreen
spec:
  replicas: 3
  revisionHistoryLimit: 5
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: bluegreen-app
      version: v3
  template:
    metadata:
      labels:
        app: bluegreen-app
        version: v3
    spec:
      containers:
      - name: buggy
        securityContext:
          runAsUser: 1000
          runAsGroup: 3000
        image: xpiritbv/bluegreen:buggy
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /health
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /health
            scheme: HTTP
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
          timeoutSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: buggy
  namespace: bluegreen
  labels:
    app: bluegreen-app
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: bluegreen-app
    version: v3
